--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heart-rate-variability-analysis",
+  "name": "@avihimsa/heart-rate-variability-analysis",
   "version": "0.0.0",
   "description": "Heart rate variability analysis",
   "author": "Luka Kakia",
